packages/parser/test/parser/E0151.txt
if test
===== err =====
anonymous:1:8: ParseError: E0151 - Expected if statement consequent statement
1 | if test
  |        ^
